<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">网上拍卖</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="btnLogin">登录</string>
    <string name="btnCancel">取消</string>
    <string name="ttlLogin">登录框</string>
    <string name="btnAdd">拍卖物品</string>
    <string name="btnBid">竞拍物品</string>
    <string name="btnSubmit">提交</string>
    <string name="bidPrice">竞拍价</string>
    <string name="txtName">物品名</string>
    <string name="txtDesc">物品描述</string>
    <string name="txtRemark">物品备注</string>
    <string name="txtPrice">起拍价格</string>
    <string name="txtTime">有效时间</string>
    <string name="txtType">物品种类</string>
    <string name="baseUrl">http://192.168.1.150:8080/auction/</string>
</resources>