<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/txtName"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/itemName"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:scrollHorizontally="false"
                    android:text="" />
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/txtDesc"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/itemDesc"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:scrollHorizontally="false"
                    android:text="" />
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/txtRemark"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/itemRemark"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:scrollHorizontally="false"
                    android:text="" />
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/txtPrice"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/itemPrice"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:scrollHorizontally="false"
                    android:text="" />
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/txtTime"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/spinnerTime"
                    android:layout_weight="1"
                    android:padding="3dip" />
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/txtType"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/spinnerKind"
                    android:layout_weight="1"
                    android:padding="3dip" />
            </TableRow>
            <TableRow android:gravity="right" >
                <Button
                    android:id="@+id/addItem"
                    android:layout_width="fill_parent"
                    android:padding="3dip"
                    android:text="@string/btnSubmit" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>